wp-into-ec2-instance/03-security-group.tf
# security group for app-servers
resource "aws_security_group" "wp-App-SG" {
  name   = "App-SG"
  vpc_id = aws_vpc.wp_vpc.id
  tags = {
    "Name" = "sg-for-app-server"
  }

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
